--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ MS Marketing Analytics Candidate, Class of 2020
 Simon Business School, University of Rochester 
   <br><br>
   <a href="https://www.linkedin.com/in/yaliu1/">View My LinkedIn Profile</a>   
-
+theme: jekyll-theme-minimal
 google_analytics: G-D9682RLY1T # your Google Analytics tracking ID here
