--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Ya Liu # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  MS Marketing Analytics Candidate, Class of 2020
+  MS Marketing Analytics Candidate
   <br><br>
   Simon Business School, University of Rochester 
   <br><br>
